@@ -4,6 +4,8 @@
 
 Version 1.4.23 - SVN
 --------------------
+  - Added capability to issue SEARCH commands in literal format (so that
+    non-ASCII search terms are handled RFC-correctly).
 
 Version 1.4.22 - 12 July 2011
 -----------------------------
